src/rules/isort/snapshots/ruff__rules__isort__tests__preserve_indentation.py.snap
---
source: src/rules/isort/mod.rs
expression: diagnostics
---
- kind:
    UnsortedImports: ~
  location:
    row: 2
    column: 0
  end_location:
    row: 4
    column: 0
  fix:
    content: "    import os\n    import sys\n"
    location:
      row: 2
      column: 0
    end_location:
      row: 4
      column: 0
  parent: ~
- kind:
    UnsortedImports: ~
  location:
    row: 5
    column: 0
  end_location:
    row: 7
    column: 0
  fix:
    content: "    import os\n    import sys\n"
    location:
      row: 5
      column: 0
    end_location:
      row: 7
      column: 0
  parent: ~

