src/rules/isort/snapshots/ruff__rules__isort__tests__required_import_docstring.py.snap
---
source: src/rules/isort/mod.rs
expression: diagnostics
---
- kind:
    MissingRequiredImport: from __future__ import annotations
  location:
    row: 1
    column: 0
  end_location:
    row: 1
    column: 0
  fix:
    content: "\nfrom __future__ import annotations"
    location:
      row: 1
      column: 19
    end_location:
      row: 1
      column: 19
  parent: ~

