src/rules/isort/snapshots/ruff__rules__isort__tests__separate_first_party_imports.py.snap
---
source: src/rules/isort/mod.rs
expression: diagnostics
---
- kind:
    UnsortedImports: ~
  location:
    row: 1
    column: 0
  end_location:
    row: 6
    column: 0
  fix:
    content: "import os\nimport sys\n\nimport numpy as np\n\nimport leading_prefix\nfrom leading_prefix import Class\n"
    location:
      row: 1
      column: 0
    end_location:
      row: 6
      column: 0
  parent: ~

