src/rules/isort/snapshots/ruff__rules__isort__tests__separate_future_imports.py.snap
---
source: src/rules/isort/mod.rs
expression: diagnostics
---
- kind:
    UnsortedImports: ~
  location:
    row: 1
    column: 0
  end_location:
    row: 4
    column: 0
  fix:
    content: "from __future__ import annotations\n\nimport os\nimport sys\n"
    location:
      row: 1
      column: 0
    end_location:
      row: 4
      column: 0
  parent: ~

