src/rules/isort/snapshots/ruff__rules__isort__tests__separate_third_party_imports.py.snap
---
source: src/rules/isort/mod.rs
expression: diagnostics
---
- kind:
    UnsortedImports: ~
  location:
    row: 1
    column: 0
  end_location:
    row: 5
    column: 0
  fix:
    content: "import os\nimport sys\n\nimport numpy as np\nimport pandas as pd\n"
    location:
      row: 1
      column: 0
    end_location:
      row: 5
      column: 0
  parent: ~

