src/rules/isort/snapshots/ruff__rules__isort__tests__skip.py.snap
---
source: src/rules/isort/mod.rs
expression: diagnostics
---
- kind:
    UnsortedImports: ~
  location:
    row: 12
    column: 0
  end_location:
    row: 14
    column: 0
  fix:
    content: "    import abc\n    import collections\n"
    location:
      row: 12
      column: 0
    end_location:
      row: 14
      column: 0
  parent: ~
- kind:
    UnsortedImports: ~
  location:
    row: 19
    column: 0
  end_location:
    row: 21
    column: 0
  fix:
    content: "    import abc\n    import collections\n"
    location:
      row: 19
      column: 0
    end_location:
      row: 21
      column: 0
  parent: ~

